v3.6.5 (XXXX-XX-XX)
-------------------

* Updated ArangoDB Starter to 0.14.15.

* Foxx API now respects "idiomatic" flag being explicitly set to false.

* Fixed a bug in the internal `recalculateCount()` method for adjusting
  collection counts. The bug could have led to count adjustments being
  applied with the wrong sign.

* Optimized Web UI styling for ArangoSearch Views when in read-only mode.

* Pimped up network send request robustness.

* Fixed issue ES-600: log out of LDAP automatically.

  Option `--ldap.allow-offline` was added with `false` value by default to let
  server use cached offline credentials in case of LDAP server communication was
  lost and ArangoDB can't prolong cache online.

* Fixed issue #11104 case with complex condition on second branch of OR
  operator.

* Fixed issue ES-564: Opening a VST connection would leave an extra HttpCommTask
  object lying around for the life of the server. This accumulation was
  effectively a memory leak. Additionally, it led to inaccurate reporting of the
  number of open HTTP connections in the dashboard.

* Added exceptions catching in agency callbacks.

* Usability improvements for arangodump and arangorestore:
  - when a dump is restricted to one or multiple collections using the
    `--collection` option of arangodump, warnings are issued for all specified
    collections that are not present in the database. Previously there were no
    warnings, so missing a collection by misspelling its name could easily go
    unnoticed.
  - when a restore is restricted to one or multiple collections using the
    `--collection` option of arangorestore, warnings are issued for all
    specified collections that are not present in the dump. Previously there
    were no warnings, so missing a collection by misspelling its name could
    easily go unnoticed.
  - when a dump was taken using the `--overwrite` option, there was no check
    that validated whether the encryption mode used in the existing dump